- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    6.4
- 
    None
- 
        5dff3ae458 (qt/qtwayland/dev) b253017a52 (qt/qtwayland/dev) b253017a52 (qt/tqtc-qtwayland/dev) 5dff3ae458 (qt/tqtc-qtwayland/dev)
Build without xkbcommon fails after https://codereview.qt-project.org/c/qt/qtwayland/+/404258
| /home/sapiippo/qt6/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtwayland/6.4.0-r0/git/src/compositor/compositor_api/qwaylandcompositor.cpp: In member function 'void QWaylandCompositor::applicationStateChanged(Qt::ApplicationState)': | /home/sapiippo/qt6/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtwayland/6.4.0-r0/git/src/compositor/compositor_api/qwaylandcompositor.cpp:1115:19: error: 'class QWaylandKeyboardPrivate' has no member named 'resetKeyboardState' | 1115 | keyb->resetKeyboardState(); | | ^~~~~~~~~~~~~~~~~~
- resulted from
- 
                    QTBUG-101862 [Wayland] Shortcut no longer activated after Alt+Tab when using WaylandCompositor/WaylandOutput in QML application -         
- Closed
 
-