compositor: Fix build without xkbcommon

This amends 4910b7adfa706520cd5180d5384b999488550aef.

QWaylandKeyboardPrivate::resetKeyboardState() is behind an #if.
We need to match the condition for the code that calls it.

Fixes: QTBUG-103341
Change-Id: I6337a64870bb08930b0d19e03ca7fcc28e345493
Reviewed-by: Liang Qi <liang.qi@qt.io>